# ros_sharp_pose_publisher

./: CMakeLists.txt  README.md  package.xml
scripts/: send_kinematics.py
